# tempo

./: README.md  setup.cfg
examples/: nath.tex  nath.yaml  week.tex  week.yaml
src/tempo/: __init__.py  tempo.py
src/tempo/tempolib/: __init__.py  tempolib.py
