[metadata]
# replace with your username:
name = tempo
version = 0.1.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = General Time & Scheduling Python Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://satyrus3.github.io
project_urls =
    Bug Tracker = https://github.com/pedromxavier/tempo/issues
    Source = https://github.com/pedromxavier/tempo
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
package_dir =
    =src
packages =
    tempo
    tempo.tempolib
scripts =
    bin/tempo
install_requires =
    toml >= 0.10.2
    cstream >= 1.0.3
python_requires = >=3.7, <3.10

[options.entry_points]
console_scripts =
        tempo = tempo:main